# audio-bridge-linux-mac

./: Cargo.toml  README.md
crates/core/: Cargo.toml
crates/core/src/: devices.rs  drift.rs  lib.rs  pipeline.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: args.rs  main.rs  mdns.rs
docs/: doc.md
scripts/: linux_setup.sh  macos_setup.sh
